[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Enimegos/PolicialNormalAndando_02.png" type="Texture" id=1]
[ext_resource path="res://ACAB.gd" type="Script" id=2]
[ext_resource path="res://assets/Enimegos/PolicialNormalAndando_04.png" type="Texture" id=3]
[ext_resource path="res://assets/Enimegos/PolicialNormalAtirando_01.png" type="Texture" id=4]
[ext_resource path="res://assets/Enimegos/PolicialNormalAndando_03.png" type="Texture" id=5]
[ext_resource path="res://assets/Enimegos/PolicialNormalAtirando_02.png" type="Texture" id=6]
[ext_resource path="res://assets/Enimegos/PolicialNormalAndando_01.png" type="Texture" id=7]
[ext_resource path="res://assets/Enimegos/PolicialNormalAtirando_05.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 72 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": false,
"name": "TiroPol",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "AndandoPol",
"speed": 5.0
} ]

[node name="ACAB" type="KinematicBody2D"]
position = Vector2( 64.6763, 0 )
collision_layer = 16
collision_mask = 9
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimerBurst" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TimerTiro" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerAndar" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "TiroPol"
frame = 2
playing = true
[connection signal="timeout" from="TimerBurst" to="." method="_on_TimerBurst_timeout"]
[connection signal="timeout" from="TimerTiro" to="." method="_on_TimerTiro_timeout"]
[connection signal="timeout" from="TimerAndar" to="." method="_on_TimerAndar_timeout"]
